# bem_cpu

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  Dockerfile  README.md  clean.sh  run_docker.sh
include/: connectivity.hpp  connectivity.hpp~  connectivity_tests.hpp  deduplicate.hpp  deduplicate.hpp~  geometry.cuh~  geometry.hpp  geometry.hpp~  geometry_analyzer.hpp  geometry_analyzer.hpp~  geometry_gpu.hpp~  geometry_utility.hpp  geometry_utility.hpp~  mesh_utils.hpp  mesh_utils.hpp~  quadrature.hpp~  quadruture.hpp~  trgl6_icos.hpp  trgl6_icos.hpp~  vec3.hpp  vec3.hpp~  write_txt.hpp  write_txt.hpp~  write_vtk.hpp  write_vtk.hpp~
main/: main.cpp  main.cpp~
output/: curvature.txt  mesh.vtk  n.txt  nbe.txt  ne.txt  node_curvature.txt  p.txt  vna.txt  vnc.txt
src/: connectivity.cpp  connectivity.cpp~  connectivity_tests.cpp  connectivity_tests.cpp~  deduplicate.cpp  geometry.cpp~  geometry_analyzer.cpp  geometry_analyzer.cpp~  geometry_utility.cpp  geometry_utility.cpp~  mesh_utils.cpp  quadrature.cpp  test_connectivity.cpp  test_connectivity.cpp~  trgl6_icos.cpp  trgl6_icos.cpp~  write_txt.cpp  write_txt.cpp~  write_vtk.cpp  write_vtk.cpp~
tests/: benchmark_cpu_gpu.sh  benchmark_cpu_gpu.sh~  log_cpu.txt  log_cpu_ndiv02_threads02.txt  log_cpu_ndiv02_threads04.txt  log_cpu_ndiv02_threads06.txt  log_cpu_ndiv02_threads08.txt  log_cpu_ndiv04_threads02.txt  log_cpu_ndiv04_threads04.txt  log_cpu_ndiv04_threads06.txt  log_cpu_ndiv04_threads08.txt  log_cpu_ndiv06_threads02.txt  log_cpu_ndiv06_threads04.txt  log_cpu_ndiv06_threads06.txt  log_cpu_ndiv06_threads08.txt  log_cpu_ndiv08_threads02.txt  log_cpu_ndiv08_threads04.txt  log_gpu.txt  (+11 more)
(+3 files in other folders)
